--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body{
    width: 80%;
    display: flex;
    flex-direction: row;
-    
+   color: white;
    margin: auto;
    background-image: url("img/bgpic.jpg");
    background-size: cover;
@@ -67,10 +67,11 @@ form{
 }
 #lcont{
    display: flex;
+   color: rgb(0, 0, 0);
+   padding-top: 0px;
    color: white;
-   padding-top: 150px;
-
    gap: 10px;
+
 }
 center{
    color: white;
@@ -81,3 +82,26 @@ iframe{
    border-radius: 15px;
    margin-top: 20px;
 }
+#current{
+    padding-top: 50px;
+}
+@media screen and (max-width: 600px) {
+    #container{
+        flex-direction: column-reverse;
+      
+    }
+    #right{
+        width: 100%;
+    }
+    #left{
+        padding-left: 30px;
+        height: fit-content;
+    }
+    #lcont{
+        display: flex;
+        flex-direction: column;
+        color: white;
+        padding-top: 50px;
+        gap: 10px;
+     }
+  }
