--- a/style.css
+++ b/style.css
@@ -85,6 +85,25 @@ iframe{
 #current{
     padding-top: 50px;
 }
+#dailyfor{
+    width: 80%;
+    margin: auto;
+    display: flex;
+    gap:10px;
+    margin-top: 20px;
+    background-color: rgb(253, 255, 255);
+    border-radius: 15px;
+}
+#dailyfor>div{
+   border-radius: 15px;
+   height: 130px;
+   box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
+   background-color: rgb(141, 141, 141);
+   width: 100px;
+   margin: 20px;
+   text-align: center;
+
+}
 @media screen and (max-width: 600px) {
     #container{
         flex-direction: column-reverse;
@@ -114,6 +133,10 @@ iframe{
      }
      #userinput{
          width: 70%;
+     }
+     #dailyfor{
+         flex-direction: column;
+         align-items: center;
      }
 
   }
